<resources>
    <string name="app_name">Casino</string>
    <string name="play_button">Play</string>
    <string name="hit_text">Hit</string>
    <string name="hold_text">Hold</string>
    <string name="computer_name">HAL 9000</string>
    <string name="play_again_text">Play Again</string>
    <string name="welcome_text">Welcome to the Double Down Casino!</string>
    <string name="player_name">Please enter your name</string>
    <string name="continue_text">Play Black Jack</string>
    <string name="preference_file_key">PLAYER</string>
    <string name="check_winner">Reveal Cards</string>
    <string name="play_poker_text">Play Poker</string>
    <string name="fold_text">Fold</string>
    <string name="bet_text">Bet</string>
    <string name="start_screen_text">Return to Start</string>
    <string name="warning_message">Not Enough Money - min £10</string>
    <string name="finish_text">Finish</string>
    <string name="return_to_start_text">Return To Start</string>
    <string name="computer_raise_text">Computer Raises!</string>
    <string name="raise_text">Raise</string>
</resources>
