<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cardtable"
    tools:context="com.musicarray.codeclan.blackjack.GameActivity">

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/result_gridview_computer"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="5"
        android:padding="0dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_computer_name"
        app:layout_constraintVertical_bias="0.24" />


    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview_player"
        android:layout_width="wrap_content"
        android:layout_height="147dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="5"
        android:padding="0dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name" />

    <TextView
        android:id="@+id/result_computer_name"
        android:layout_width="342dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/computer_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hold_button"
        tools:text="@string/computer_name" />

    <Button
        android:id="@+id/hit_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/pokerchipbutton"
        android:onClick="onHitButtonClicked"
        android:text="@string/hit_text"
        app:layout_constraintBottom_toTopOf="@+id/result_computer_name"
        app:layout_constraintEnd_toStartOf="@+id/hold_button"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridview_player" />

    <Button
        android:id="@+id/hold_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/pokerchipbutton"
        android:onClick="onHoldButtonClicked"
        android:text="@string/hold_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridview_player" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
